--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 <!--site:fontawesome / X mark icon-->
                 <i class="fa fa-times"></i>
                 <ul>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">ABOUT</a></li>
-                    <li><a href="">SERVICES</a></li>
-                    <li><a href="">BLOG</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="seccion2.html">ABOUT</a></li>
+                    <li><a href="seccion3.html">SERVICES</a></li>
+                    <li><a href="seccion4.html">BLOG</a></li>
                     <li><a href="">CONTACT</a></li>
                 </ul>
             </div>
@@ -124,7 +124,7 @@
     <!--Mapa google-->
     <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d166642.52431183818!2d-58.41496211168074!3d-34.69082197326144!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3b4ef90cbd%3A0xa0b3812e88e88e87!2sBuenos%20Aires%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1692524303799!5m2!1ses-419!2sar"
-        width="1890" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+        width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade">
     </iframe>
 
