--- a/seccion2.html
+++ b/seccion2.html
@@ -1,26 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!--site:Google Fonts, tipografia: Montserrat-->
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100;0,400;0,900;1,900&display=swap"
-        rel="stylesheet">
-
-    <!-- site: BootstrapCDN-->
-    <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
-    <title>Sección 2</title>
+    <title>Opening&Ending</title>
 </head>
-
-<body>
-    <section class="header">
+<body class="Fondo">
+    <Header>
         <nav>
             <a href="index.html"><img src="images/logo.png" /> </a>
             <div class="nav-links" id="navlinks">
@@ -38,7 +25,180 @@
             <i class="fa fa-bars"></i>
 
         </nav>
-    </section>
+    </Header>
+    <div class="Container_Music">
+        <a href="">de: Música</a>
+        <br>
+        <br>
+        <h1>Canciones Opening</h1>
+        <br>
+        <br>
+        <p>Los Opening, son las conocidas como <strong>canciones de apertura</strong>, son las canciones que se transmiten previo a empezar una película, o un episodio de un programa o una serie, junto al video que hacen referencia a la serie y personajes que forman parte de ella.</p>
+        <br>
+        <br>
+        <div class="Sumario">Sumario 
+            <hr>
+            <br>
+            <ol>
+                <li>Makafushigi Adventure!</li>
+                <li>Cha-La Head-Cha-La</li>
+                <li>We Gotta Power</li>
+                <li>Dan Dan Kokoro Hikateteku</li>
+                <li>Dragon Soul</li>
+                <li>Figth it Out!!</li>
+                <li>Kuu-Zen-Zetsu-Go</li>
+                <li>Cho-Zets Dynamic!</li>
+                <li>Genkai Toppa x Survivor</li>
+                <li>Dragon Ball Z</li>
+            </ol>
+        </div>
+        <br>
+        <div>
+            <h3 class="Titulo_Lista">Lista de canciones Opening</h3>
+            <hr>
+            <br>
+            <br>
+            <table class="Tabla_Opening">
+                <tr>
+                    <th><b>#</b></th>
+                    <th><b>Original</b></th>
+                    <th><b>Traducción al español</b></th>
+                    <th><b>Serie</b></th>
+                    <th><b>Primer episodio</b></th>
+                    <th><b>Último episodio</b></th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Makafushigi Adventure!</td>
+                    <td>¡La aventura mística!</td>
+                    <td>Dragon Ball</td>
+                    <td>Episodio 1</td>
+                    <td>Episodio 153</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Cha-La Head-Cha-La</td>
+                    <td>Chala, no hay problema</td>
+                    <td>Dragon Ball Z</td>
+                    <td>Episodio 1</td>
+                    <td>Episodio 199</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>We Gotta Power</td>
+                    <td>Tenemos el poder</td>
+                    <td>Dragon Ball Z</td>
+                    <td>Episodio 200</td>
+                    <td>Episodio 291</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Dan Dan Kokoro Hikateteku</td>
+                    <td>Poco a poco mi corazón es encantado</td>
+                    <td>Dragon Ball GT</td>
+                    <td>Episodio 1</td>
+                    <td>Episodio 64</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>Dragon Soul</td>
+                    <td>Alma de dragón</td>
+                    <td>Dragon Ball Z Kai</td>
+                    <td>Episodio 1</td>
+                    <td>Episodio 98</td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td>Figth it Out!!</td>
+                    <td>¡A luchar!</td>
+                    <td>Dragon Ball Z Kai: The Final Chapters</td>
+                    <td>Episodio 1</td>
+                    <td>Episodio 61</td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td>Kuu-Zen-Zetsu-Go</td>
+                    <td>Como nunca antes ni después</td>
+                    <td>Dragon Ball Kai (Saga de Majin Boo)</td>
+                    <td>Episodio 1</td>
+                    <td>Episodio 61</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td>Cho-Zets Dynamic!</td>
+                    <td>¡Trascendente, dinámico</td>
+                    <td>Dragon Ball Super</td>
+                    <td>Episodio 1</td>
+                    <td>Episodio 76</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td>Genkai Toppa x Survivor</td>
+                    <td>Supera tus límites, superviviente</td>
+                    <td>Dragon Ball Super</td>
+                    <td>Episodio 77</td>
+                    <td>Episodio 131</td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td>Super Dragon Ball Heroes Universe Mission Theme Song</td>
+                    <td>Canción de Super Dragon Ball Heroes: misión Universo</td>
+                    <td>Super Dragon Ball Heroes: Misión del universo</td>
+                    <td>Episodio 1</td>
+                    <td>Episodio 19</td>
+                </tr>
+                <tr>
+                    <td>11</td>
+                    <td>Super Dragon Ball Heroes Big Bang Mission Theme Song</td>
+                    <td>Canción de Super Dragon Ball Heroes: misión Big Bang</td>
+                    <td>Super Dragon Ball Heroes: Misión del Big Bang</td>
+                    <td>Episodio 1</td>
+                    <td></td>
+                </tr>
+            </table>
+        </div>
+        <br><br><br>
+        <div>
+            <h2>Makafushigi Adventure!</h2>
+            <hr>
+            <p>El tema de apertura usado en la primera parte de Dragon Ball. Tuvo 2 versiones de secuencia de vídeo: la primera desde el episodio 1 al 101; la segunda abarcó el resto de episodios en donde cambiaron algunas escenas más acordes al punto en el que estaba la historia. </p>
+            <br><br>
+            <h2>Cha-La Head-Cha-La</h2>
+            <hr>
+            <p>El primer tema de apertura usado en Dragon Ball Z. Tuvo 3 versiones, la primera desde el episodio 1 al 21, la segunda del episodio 22 al 117; y la tercera estuvo presente desde el 118 hasta el 199 cambiando algunas escenas acorde iba avanzando la trama, pero conservando la música.</p>
+            <br><br>
+            <h2>We Gotta Power</h2>
+            <hr>
+            <p>El segundo tema de apertura de Dragon Ball Z. Desde el episodio 200 hasta el 291.</p>
+            <br><br>
+            <h2>Dan Dan Kokoro Hikareteku</h2>
+            <hr>
+            <p>Tema de apertura usado en Dragon Ball GT. Tuvo 2 versiones de la secuencia de vídeo.</p>
+            <br><br>
+            <h2>Dragon Soul</h2>
+            <hr>
+            <p>Primer tema de apertura usado en Dragon Ball Z Kai. Tuvo 4 versiones de la secuencia de vídeo.</p>
+            <br><br>
+            <h2>Fight it out!!</h2>
+            <hr>
+            <p>Tema de apertura usado para Dragon Ball Z Kai: Los capítulos finales.</p>
+            <br><br>
+            <h2>Kuu-Zen-Zetsu-Go</h2>
+            <hr>
+            <p>Segundo tema de apertura usado en Dragon Ball Kai durante la transmisión por Fuji TV.</p>
+            <br><br>
+            <h2>Cho-Zets Dynamic!</h2>
+            <hr>
+            <p>Primer tema de apertura usado en Dragon Ball Super.</p>
+            <br><br>
+            <h2>Genkai Toppa x Survivor</h2>
+            <hr>
+            <p>Segundo tema de apertura usado en Dragon Ball Super.</p>
+            <br><br>
+            <h2>Dragon Ball Z</h2>
+            <hr>
+            <p>Fue el primer tema de apertura utilizado en Francia para el doblaje del anime de Dragon Ball Z. Por temas de licencia, la canción sería posteriormente utilizada, con base en la edición original francesa por las demás versiones de la serie en Europa, incluyendo el doblaje al castellano del estudio Videotake Sur durante sus primeras emisiones, para rápidamente ser sustituido CHA-LA HEAD-CHA-LA.</p>
+        </div>     
+    </div>
 </body>
-
 </html>
