--- a/seccion2.html
+++ b/seccion2.html
@@ -15,7 +15,7 @@
                 <i class="fa fa-times"></i>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="seccion2.html">ABOUT</a></li>
+                    <li><a href="seccion2.html">Opening&Ending</a></li>
                     <li><a href="seccion3.html">SERVICES</a></li>
                     <li><a href="seccion4.html">BLOG</a></li>
                     <li><a href="">CONTACT</a></li>
@@ -36,6 +36,7 @@
         <p>Los Opening, son las conocidas como <strong>canciones de apertura</strong>, son las canciones que se transmiten previo a empezar una película, o un episodio de un programa o una serie, junto al video que hacen referencia a la serie y personajes que forman parte de ella.</p>
         <br>
         <br>
+        <!--Sumario de canciones-->
         <div class="Sumario">Sumario 
             <hr>
             <br>
@@ -52,9 +53,10 @@
                 <li>Dragon Ball Z</li>
             </ol>
         </div>
-        <br>
+        <br><br><br>
+        <!--Tabla con las canciones y especificaciones-->
         <div>
-            <h3 class="Titulo_Lista">Lista de canciones Opening</h3>
+            <h2 class="Titulo_Lista">Lista de canciones Opening</h2>
             <hr>
             <br>
             <br>
@@ -158,6 +160,7 @@
             </table>
         </div>
         <br><br><br>
+        <!--Descripción de las canciones-->
         <div>
             <h2>Makafushigi Adventure!</h2>
             <hr>
