Arrancando_el_Ending

--- a/seccion2.html
+++ b/seccion2.html
@@ -30,6 +30,7 @@
         <a href="">de: Música</a>
         <br>
         <br>
+        <!--Canciones Opening-->
         <h1>Canciones Opening</h1>
         <br>
         <br>
@@ -37,7 +38,7 @@
         <br>
         <br>
         <!--Sumario de canciones-->
-        <div class="Sumario">Sumario 
+        <div class="Sumario_Opening">Sumario 
             <hr>
             <br>
             <ol>
@@ -201,7 +202,30 @@
             <h2>Dragon Ball Z</h2>
             <hr>
             <p>Fue el primer tema de apertura utilizado en Francia para el doblaje del anime de Dragon Ball Z. Por temas de licencia, la canción sería posteriormente utilizada, con base en la edición original francesa por las demás versiones de la serie en Europa, incluyendo el doblaje al castellano del estudio Videotake Sur durante sus primeras emisiones, para rápidamente ser sustituido CHA-LA HEAD-CHA-LA.</p>
-        </div>     
+        </div>  
+        <br><br><br>
+        <!--Canciones Ending-->
+        <h1 class="Canciones_Ending">Canciones Ending</h1><br><br>
+        <p>En las series de televisión, la <strong>canción de cierre</strong> son las canciones que se transmiten al finalizar un episodio junto con imágenes o secuencias que hacen referencia a la serie o a los personajes que forman parte de ella. Son usados al final de cada episodio de las series de Dragon Ball, los cuales son cambiados por temporada. Sin embargo, a partir de Dragon Ball Z Kai (versión de Fuji TV) empiezan a cambiar frecuentemente.</p><br><br>
+        <div class="Sumario_Ending">Sumario 
+            <hr>
+            <br>
+            <ol>
+                <li>Dragon Ball</li>
+                    <ul>
+                        <li>Romantic Ageru Yo</li>
+                    </ul>
+                <li>Cha-La Head-Cha-La</li>
+                <li>We Gotta Power</li>
+                <li>Dan Dan Kokoro Hikateteku</li>
+                <li>Dragon Soul</li>
+                <li>Figth it Out!!</li>
+                <li>Kuu-Zen-Zetsu-Go</li>
+                <li>Cho-Zets Dynamic!</li>
+                <li>Genkai Toppa x Survivor</li>
+                <li>Dragon Ball Z</li>
+            </ol>
+        </div>
     </div>
 </body>
 </html>
