Endings_hasta_DBZKai

--- a/seccion2.html
+++ b/seccion2.html
@@ -212,12 +212,25 @@
             <br>
             <ol>
                 <li>Dragon Ball</li>
-                    <ul>
+                    <ol>
                         <li>Romantic Ageru Yo</li>
-                    </ul>
-                <li>Cha-La Head-Cha-La</li>
-                <li>We Gotta Power</li>
-                <li>Dan Dan Kokoro Hikateteku</li>
+                    </ol>
+                <li>Dragon Ball Z</li>
+                    <ol>
+                        <li>Detekoi Tobiriki Zenkai Power!</li>
+                        <li>Boku-tachi wa Tenshi datta</li>
+                    </ol>
+                <li>Dragon Ball GT</li>
+                    <ol>
+                        <li>Hitori ja Nai</li>
+                        <li>Don't you see!</li>
+                        <li>Blue Velvet</li>
+                        <li>Sabitsuita Machinegun de Ima o Uchinuko</li>
+                    </ol>
+                <li>Dragon Ball Z Kai</li>
+                    <ol>
+                        <li></li>
+                    </ol>
                 <li>Dragon Soul</li>
                 <li>Figth it Out!!</li>
                 <li>Kuu-Zen-Zetsu-Go</li>
