Sumario_Ending_Completo

--- a/seccion2.html
+++ b/seccion2.html
@@ -229,14 +229,29 @@
                     </ol>
                 <li>Dragon Ball Z Kai</li>
                     <ol>
-                        <li></li>
+                        <li>Yeah! Break! Care! Break!</li>
+                        <li>Wings of the Heart</li>
+                        <li>Never give up!!!</li>
+                        <li>Haikei, Zarathustra</li>
+                        <li>Junjo</li>
+                        <li>Oh Yeah!!!!!</li>
+                        <li>Galaxy</li>
+                        <li>Don’t Let Me Down</li>
                     </ol>
-                <li>Dragon Soul</li>
-                <li>Figth it Out!!</li>
-                <li>Kuu-Zen-Zetsu-Go</li>
-                <li>Cho-Zets Dynamic!</li>
-                <li>Genkai Toppa x Survivor</li>
-                <li>Dragon Ball Z</li>
+                <li>Dragon Ball Super</li>
+                    <ol>
+                        <li>Hello Hello Hello</li>
+                        <li>Starring Star</li>
+                        <li>Usubeni</li>
+                        <li>Forever Dreaming</li>
+                        <li>Yoka-Yoka Dance</li>
+                        <li>Chaofan Music</li>
+                        <li>Aku no Tenshi to Seigi no Akuma</li>
+                        <li>Boogie Back</li>
+                        <li>Haruka</li>
+                        <li>70cm Shino no Modobe</li>
+                        <li>Lágrima</li>
+                    </ol>
             </ol>
         </div>
     </div>
