--- a/seccion2.html
+++ b/seccion2.html
@@ -42,20 +42,40 @@
             <hr>
             <br>
             <ol>
-                <li>Makafushigi Adventure!</li>
-                <li>Cha-La Head-Cha-La</li>
-                <li>We Gotta Power</li>
-                <li>Dan Dan Kokoro Hikateteku</li>
-                <li>Dragon Soul</li>
-                <li>Figth it Out!!</li>
-                <li>Kuu-Zen-Zetsu-Go</li>
-                <li>Cho-Zets Dynamic!</li>
-                <li>Genkai Toppa x Survivor</li>
+                <li>Dragon Ball</li>
+                <ol>
+                    <li>Makafushigi Adventure!</li>
+                </ol>
+                <li>Dragon Ball Z</li>
+                <ol>
+                    <li>Cha-La Head-Cha-La</li>
+                    <li>We Gotta Power</li>
+                </ol>
+                <li>Dragon Ball GT</li>
+                <ol>
+                    <li>Dan Dan Kokoro Hikateteku</li>
+                </ol>
+                <li>Dragon Ball Z Kai</li>
+                <ol>
+                    <li>Dragon Soul</li>
+                    <li>Figth it Out!!</li>
+                    <li>Kuu-Zen-Zetsu-Go</li>
+                </ol>
+                <li>Dragon Ball Super</li>
+                <ol>
+                    <li>Cho-Zets Dynamic!</li>
+                    <li>Genkai Toppa x Survivor</li>
+                </ol>
+                <li>Dragon Ball Heroes</li>
+                <ol>
+                    <li>Super Dragon Ball Heroes Universe Mission Theme Song</li>
+                    <li>Super Dragon Ball Heroes Big Bang Mission Theme Song</li>
+                </ol>
                 <li>Dragon Ball Z</li>
             </ol>
         </div>
         <br><br><br>
-        <!--Tabla con las canciones y especificaciones-->
+        <!--Tabla con las canciones Opening y especificaciones-->
         <div>
             <h2 class="Titulo_Lista">Lista de canciones Opening</h2>
             <hr>
@@ -207,6 +227,7 @@
         <!--Canciones Ending-->
         <h1 class="Canciones_Ending">Canciones Ending</h1><br><br>
         <p>En las series de televisión, la <strong>canción de cierre</strong> son las canciones que se transmiten al finalizar un episodio junto con imágenes o secuencias que hacen referencia a la serie o a los personajes que forman parte de ella. Son usados al final de cada episodio de las series de Dragon Ball, los cuales son cambiados por temporada. Sin embargo, a partir de Dragon Ball Z Kai (versión de Fuji TV) empiezan a cambiar frecuentemente.</p><br><br>
+        <!--Sumario Ending-->
         <div class="Sumario_Ending">Sumario 
             <hr>
             <br>
@@ -253,6 +274,160 @@
                         <li>Lágrima</li>
                     </ol>
             </ol>
+        </div>
+        <br><br><br>
+        <!--Tabla con las canciones Ending y especificaciones-->
+        <div>
+            <h2 class="Titulo_Lista">Lista de canciones Opening</h2>
+            <hr>
+            <br>
+            <br>
+            <table class="Tabla_Opening">
+                <tr>
+                    <th><b>#</b></th>
+                    <th><b>Original</b></th>
+                    <th><b>Traducción al español</b></th>
+                    <th><b>Serie</b></th>
+                    <th><b>Primer episodio</b></th>
+                    <th><b>Último episodio</b></th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Romantic Ageru Yo</td>
+                    <td>Te daré romance</td>
+                    <td>Dragon Ball</td>
+                    <td>Episodio 1</td>
+                    <td>Episodio 153</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Detekoi Tobikiri Zenkai Power!</td>
+                    <td>¡Sal de ahí, increíble poder Zenkai!</td>
+                    <td>Dragon Ball Z</td>
+                    <td>Episodio 1</td>
+                    <td>Episodio 199</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Boku-tachi wa Tenshi datta</td>
+                    <td>Fuimos ángeles</td>
+                    <td>Dragon Ball Z</td>
+                    <td>Episodio 200</td>
+                    <td>Episodio 291</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Hitori ja Nai</td>
+                    <td>No estoy solo</td>
+                    <td>Dragon Ball GT</td>
+                    <td>Episodio 1</td>
+                    <td>Episodio 26</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>Don't you see!</td>
+                    <td>¡No lo ves!</td>
+                    <td>Dragon Ball GT</td>
+                    <td>Episodio 27</td>
+                    <td>Episodio 41</td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td>Blue Velvet</td>
+                    <td>Terciopelo azul</td>
+                    <td>Dragon Ball GT</td>
+                    <td>Episodio 42</td>
+                    <td>Episodio 50</td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td>Sabitsuita Machinegun de Ima o Uchinuko</td>
+                    <td>Disparemos ahora con una metralladora oxidada</td>
+                    <td>Dragon Ball GT</td>
+                    <td>Episodio 51</td>
+                    <td>Episodio 64</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td>Yeha! Break! Care! Break!</td>
+                    <td>¡Desesperación absoluta!</td>
+                    <td>Dragon Ball Z Kai</td>
+                    <td>Episodio 1</td>
+                    <td>Episodio 54</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td>Kokoro no Hane</td>
+                    <td>Alas del corazón</td>
+                    <td>Dragon Ball Z Kai</td>
+                    <td>Episodio 55</td>
+                    <td>Episodio 98</td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td>Never give up!!!</td>
+                    <td>¡Nunca te rindas!</td>
+                    <td>Dragon Ball Z Kai: TFC</td>
+                    <td>Episodio 99</td>
+                    <td>Episodio 167</td>
+                </tr>
+                <tr>
+                    <td>11</td>
+                    <td>Haikei, Zarathustra</td>
+                    <td>Estimado Zaratustra</td>
+                    <td>Dragon Ball Z Kai: Saga de Majin Buu</td>
+                    <td>Episodio 99</td>
+                    <td>Episodio 111</td>
+                </tr>
+                <tr>
+                    <td>12</td>
+                    <td>Junjo</td>
+                    <td>Corazón Puro</td>
+                    <td>Dragon Ball Z Kai: Saga de Majin Buu</td>
+                    <td>Episodio 112</td>
+                    <td>Episodio 123</td>
+                </tr>
+                <tr>
+                    <td>13</td>
+                    <td>Oh Yeah!!!!!</td>
+                    <td>¡Oh, sí!</td>
+                    <td>Dragon Ball Z Kai: Saga de Majin Buu</td>
+                    <td>Episodio 124</td>
+                    <td>Episodio 136</td>
+                </tr>
+                <tr>
+                    <td>14</td>
+                    <td>Galaxy</td>
+                    <td>Galaxia</td>
+                    <td>Dragon Ball Z Kai: Saga de Majin Buu</td>
+                    <td>Episodio 137</td>
+                    <td>Episodio 146</td>
+                </tr>
+                <tr>
+                    <td>15</td>
+                    <td>Don’t Let Me Down</td>
+                    <td>No me dejes caer</td>
+                    <td>Dragon Ball Z Kai: Saga de Majin Buu</td>
+                    <td>Episodio 147</td>
+                    <td>Episodio 159</td>
+                </tr>
+                <tr>
+                    <td>16</td>
+                    <td>Hello, Hello, Hello</td>
+                    <td>Hola, Hola, Hola</td>
+                    <td>Dragon Ball Super</td>
+                    <td>Episodio 1</td>
+                    <td>Episodio 12</td>
+                </tr>
+                <tr>
+                    <td>17</td>
+                    <td>Starring Star</td>
+                    <td>Estrella protagonista</td>
+                    <td>Dragon Ball Super</td>
+                    <td>Episodio 12</td>
+                    <td>Episodio 25</td>
+                </tr>
+            </table>
         </div>
     </div>
 </body>
