Tabla_Ending_finalizada

--- a/seccion2.html
+++ b/seccion2.html
@@ -427,6 +427,78 @@
                     <td>Episodio 12</td>
                     <td>Episodio 25</td>
                 </tr>
+                <tr>
+                    <td>18</td>
+                    <td>Usebeni</td>
+                    <td>Rosa claro</td>
+                    <td>Dragon Ball Super</td>
+                    <td>Episodio 26</td>
+                    <td>Episodio 36</td>
+                </tr>
+                <tr>
+                    <td>19</td>
+                    <td>Forever Dreaming</td>
+                    <td>Siempre soñando</td>
+                    <td>Dragon Ball Super</td>
+                    <td>Episodio 37</td>
+                    <td>Episodio 49</td>
+                </tr>
+                <tr>
+                    <td>20</td>
+                    <td>Yoka-Yoka Dance</td>
+                    <td>Danza simple de manejar</td>
+                    <td>Dragon Ball Super</td>
+                    <td>Episodio 50</td>
+                    <td>Episodio 59</td>
+                </tr>
+                <tr>
+                    <td>21</td>
+                    <td>Chaofan Music</td>
+                    <td>Música de arroz frito</td>
+                    <td>Dragon Ball Super</td>
+                    <td>Episodio 60</td>
+                    <td>Episodio 72</td>
+                </tr>
+                <tr>
+                    <td>22</td>
+                    <td>Aku no Tenshi to Seigi no Akuma</td>
+                    <td>Un ángel del mao y un demonio de la justicia</td>
+                    <td>Dragon Ball Super</td>
+                    <td>Episodio 73</td>
+                    <td>Episodio 83</td>
+                </tr>
+                <tr>
+                    <td>23</td>
+                    <td>Boogie Back</td>
+                    <td>Vuelve a bailar</td>
+                    <td>Dragon Ball Super</td>
+                    <td>Episodio 84</td>
+                    <td>Episodio 96</td>
+                </tr>
+                <tr>
+                    <td>24</td>
+                    <td>Haruka</td>
+                    <td>Muy lejos</td>
+                    <td>Dragon Ball Super</td>
+                    <td>Episodio 97</td>
+                    <td>Episodio 108</td>
+                </tr>
+                <tr>
+                    <td>25</td>
+                    <td>70cm Shiho no Madobe</td>
+                    <td>Una ventana de 70 centímetros cuadrados</td>
+                    <td>Dragon Ball Super</td>
+                    <td>Episodio 110</td>
+                    <td>Episodio 121</td>
+                </tr>
+                <tr>
+                    <td>26</td>
+                    <td>Lagrima</td>
+                    <td>Lágrima</td>
+                    <td>Dragon Ball Super</td>
+                    <td>Episodio 122</td>
+                    <td>Episodio 131</td>
+                </tr>
             </table>
         </div>
     </div>
