Tabla_ending_finalizada

--- a/seccion2.html
+++ b/seccion2.html
@@ -26,6 +26,7 @@
 
         </nav>
     </Header>
+    <!--Contenedor de todo el contenido-->
     <div class="Container_Music">
         <a href="">de: Música</a>
         <br>
