--- a/seccion3.html
+++ b/seccion3.html
@@ -31,7 +31,7 @@
                     <li><a href="seccion2.html">ABOUT</a></li>
                     <li><a href="seccion3.html">SERVICES</a></li>
                     <li><a href="seccion4.html">BLOG</a></li>
-                    <li><a href="">CONTACT</a></li>
+                    <li><a href="seccion5.html">CONTACTO</a></li>
                 </ul>
             </div>
             <!--site:fontawesome / BARS mark icon-->
