--- a/seccion2.html
+++ b/seccion2.html
@@ -82,7 +82,7 @@
             <hr>
             <br>
             <br>
-            <table class="Tabla_Opening">
+            <table class="Tabla_Opening_Ending">
                 <tr>
                     <th><b>#</b></th>
                     <th><b>Original</b></th>
@@ -182,7 +182,7 @@
             </table>
         </div>
         <br><br><br>
-        <!--Descripción de las canciones-->
+        <!--Descripción de las canciones Opening-->
         <div>
             <h2>Makafushigi Adventure!</h2>
             <hr>
@@ -279,11 +279,11 @@
         <br><br><br>
         <!--Tabla con las canciones Ending y especificaciones-->
         <div>
-            <h2 class="Titulo_Lista">Lista de canciones Opening</h2>
+            <h2 class="Titulo_Lista">Lista de canciones Ending</h2>
             <hr>
             <br>
             <br>
-            <table class="Tabla_Opening">
+            <table class="Tabla_Opening_Ending">
                 <tr>
                     <th><b>#</b></th>
                     <th><b>Original</b></th>
@@ -501,6 +501,37 @@
                     <td>Episodio 131</td>
                 </tr>
             </table>
+        </div>
+        <br><br><br>
+        <!--Descripción de las canciones Ending-->
+        <div>
+            <!--Serie: Dragon Ball-->
+            <h2>Dragon Ball</h2>
+            <hr>
+            <br>
+            <h3 class="Descripcion_cancion">Romantic Ageru Yo</h3><!--Nombre de la canción-->
+            <p>Es la única canción de cierre de Dragon Ball y posee 4 versiones a lo largo de la serie. </p>
+            <br><br>
+            <!--Serie: Dragon Ball Z-->
+            <h2>Dragon Ball Z</h2>
+            <hr>
+            <br>
+            <h3 class="Descripcion_cancion">Detekoi Tobikiri Zenkai Power!</h3><!--Nombre de la canción-->
+            <p>Es la primera canción de cierre de Dragon Ball Z, fue compuesto por Takeshi Ike (música) y Naruhisa Arakawa (letra), arreglos de Kenji Yamamoto, e interpretado por MANNA. Es utilizado en los episodios 1 a 199.</p>
+            <br>
+            <h3 class="Descripcion_cancion">Boku-tachi wa Tenshi datta</h3><!--Nombre de la canción-->
+            <p>Es el segundo tema de cierre de Dragon Ball Z, siendo compuesto por Takeshi Ike (música) y Yukinojo Mori(letra), con arreglos de Osamu Totsuka. Es interpretado por Hironobu Kageyama. Se utiliza en los episodios 200 a 291.</p>
+            <br><br>
+            <!--Serie: Dragon Ball GT-->
+            <h2>Dragon Ball GT</h2>
+            <hr>
+            <br>
+            <h3 class="Descripcion_cancion">Hitori ja Nai</h3><!--Nombre de la canción-->
+            <p>Es la primera canción de la serie anime Dragon Ball GT, y el noveno sencillo de la banda J-pop Deen. Fue lanzado en un minidisco el 1 de abril de 1996, sólo en Japón llegó al número 3 en las listas de Oricon. Se juntó con la canción "Sunday". La canción fue usada por los primeros 26 episodios de la serie.</p>
+            <br>
+            <h3 class="Descripcion_cancion">Don't you see!</h3><!--Nombre de la canción-->
+            <p>Es la segunda canción de cierre de Dragon Ball GT, fue compuesto por Seichiro Kuribayashi (música) y Izumi Sakai (letra), con arreglas por Takeshi Hayama e interpretado por Zard. Es utilizado en los episodios 27 a 41.</p>
+            <br>
         </div>
     </div>
 </body>
