Dragon Ball Z Kai

--- a/seccion2.html
+++ b/seccion2.html
@@ -532,6 +532,40 @@
             <h3 class="Descripcion_cancion">Don't you see!</h3><!--Nombre de la canción-->
             <p>Es la segunda canción de cierre de Dragon Ball GT, fue compuesto por Seichiro Kuribayashi (música) y Izumi Sakai (letra), con arreglas por Takeshi Hayama e interpretado por Zard. Es utilizado en los episodios 27 a 41.</p>
             <br>
+            <h3 class="Descripcion_cancion">Blue Velvet</h3><!--Nombre de la canción-->
+            <p>Es el tercer tema de cierre de Dragon Ball GT, fue compuesto por Hatake (música) y Aeri (letra), con arreglos de Hatake e interpretado por Shizuka Kudō. Es utilizado en los episodios 42 a 50.</p>
+            <br>
+            <h3 class="Descripcion_cancion">Sabitsuita Machinegun de Ima o Uchinuko</h3><!--Nombre de la canción-->
+            <p>Es el cuarto tema de cierre de Dragon Ball GT, fue compuesto por Miho Komatsu (música) y Miho Komatsu (letra), con arreglas por Daisuke Ikeda e interpretado por Wands. Es utilizado en los episodios 51 a 63.</p>
+            <br><br>
+            <!--Serie: Dragon Ball GT-->
+            <h2>Dragon Ball Z Kai</h2>
+            <hr>
+            <br>
+            <h3 class="Descripcion_cancion">Yeah! Break! Care! Break!</h3><!--Nombre de la canción-->
+            <p>Es el primer tema de clausura de Dragon Ball Z Kai, es interpretada por Takayoshi Tanimoto, compuesta por Iwasaki Takafumi y escrita por Mori Yuriko. Es utilizada desde el episodio 1 al 54.</p>
+            <br>
+            <h3 class="Descripcion_cancion">Wings of the Heart</h3><!--Nombre de la canción-->
+            <p>Es el segundo tema de clausura de Dragon Ball Kai, es interpretada por Team Dragon, compuesta por Yoko Kensuke y escrita por Akimoto Yasushi. Es utilizada desde el episodio 55 al 98.</p>
+            <br>
+            <h3 class="Descripcion_cancion">Never give up!!!</h3><!--Nombre de la canción-->
+            <p>Es el tercer tema de clausura de Dragon Ball Z Kai, es interpretado por la banda Junear. Es utilizada desde el episodio 99 al 167.Este Ending nunca fue emitido en Japón.</p>
+            <br>
+            <h3 class="Descripcion_cancion">Haikei, Zarathustra</h3><!--Nombre de la canción-->
+            <p>Es el tercer tema de clausura de Dragon Ball Kai durante la transmisión por Fuji TV, es interpretado por Good Morning America. Es utilizada desde el episodio 99 al 111.</p>
+            <br>
+            <h3 class="Descripcion_cancion">Junjo</h3><!--Nombre de la canción-->
+            <p>Es el cuarto tema de clausura de Dragon Ball Kai durante la transmisión por Fuji TV, es interpretado por Leo Ieiri. Es utilizada desde el episodio 112 hasta el 123.</p>
+            <br>
+            <h3 class="Descripcion_cancion">Oh Yeah!!!!!!!</h3><!--Nombre de la canción-->
+            <p>Es el quinto tema de clausura de Dragon Ball Kai durante la transmisión por Fuji TV, es interpretado por Czecho No Republic. Es utilizada desde el episodio 124 hasta el 136.</p>
+            <br>
+            <h3 class="Descripcion_cancion">Galaxy</h3><!--Nombre de la canción-->
+            <p>Es el sexto tema de clausura de Dragon Ball Kai durante la transmisión por Fuji TV, es interpretado por la banda Kyuusonekokami (キュウソネコカミ). Es utilizado desde el episodio 137 hasta el 146.</p>
+            <br>
+            <h3 class="Descripcion_cancion">Don’t Let Me Down</h3><!--Nombre de la canción-->
+            <p>Es el séptimo tema de clausura de Dragon Ball Kai durante la transmisión por Fuji TV. Es utilizado desde el episodio 147 y sigue vigente.</p>
+            <br>
         </div>
     </div>
 </body>
