--- a/seccion2.html
+++ b/seccion2.html
@@ -520,7 +520,7 @@
             <p>Es la primera canción de cierre de Dragon Ball Z, fue compuesto por Takeshi Ike (música) y Naruhisa Arakawa (letra), arreglos de Kenji Yamamoto, e interpretado por MANNA. Es utilizado en los episodios 1 a 199.</p>
             <br>
             <h3 class="Descripcion_cancion">Boku-tachi wa Tenshi datta</h3><!--Nombre de la canción-->
-            <p>Es el segundo tema de cierre de Dragon Ball Z, siendo compuesto por Takeshi Ike (música) y Yukinojo Mori(letra), con arreglos de Osamu Totsuka. Es interpretado por Hironobu Kageyama. Se utiliza en los episodios 200 a 291.</p>
+            <p>Es la segunda canción de cierre de Dragon Ball Z, siendo compuesto por Takeshi Ike (música) y Yukinojo Mori(letra), con arreglos de Osamu Totsuka. Es interpretado por Hironobu Kageyama. Se utiliza en los episodios 200 a 291.</p>
             <br><br>
             <!--Serie: Dragon Ball GT-->
             <h2>Dragon Ball GT</h2>
@@ -533,38 +533,75 @@
             <p>Es la segunda canción de cierre de Dragon Ball GT, fue compuesto por Seichiro Kuribayashi (música) y Izumi Sakai (letra), con arreglas por Takeshi Hayama e interpretado por Zard. Es utilizado en los episodios 27 a 41.</p>
             <br>
             <h3 class="Descripcion_cancion">Blue Velvet</h3><!--Nombre de la canción-->
-            <p>Es el tercer tema de cierre de Dragon Ball GT, fue compuesto por Hatake (música) y Aeri (letra), con arreglos de Hatake e interpretado por Shizuka Kudō. Es utilizado en los episodios 42 a 50.</p>
+            <p>Es la tercera canción de cierre de Dragon Ball GT, fue compuesto por Hatake (música) y Aeri (letra), con arreglos de Hatake e interpretado por Shizuka Kudō. Es utilizado en los episodios 42 a 50.</p>
             <br>
             <h3 class="Descripcion_cancion">Sabitsuita Machinegun de Ima o Uchinuko</h3><!--Nombre de la canción-->
-            <p>Es el cuarto tema de cierre de Dragon Ball GT, fue compuesto por Miho Komatsu (música) y Miho Komatsu (letra), con arreglas por Daisuke Ikeda e interpretado por Wands. Es utilizado en los episodios 51 a 63.</p>
+            <p>Es la cuarta canción de cierre de Dragon Ball GT, fue compuesto por Miho Komatsu (música) y Miho Komatsu (letra), con arreglas por Daisuke Ikeda e interpretado por Wands. Es utilizado en los episodios 51 a 63.</p>
             <br><br>
-            <!--Serie: Dragon Ball GT-->
+            <!--Serie: Dragon Ball Z Kai-->
             <h2>Dragon Ball Z Kai</h2>
             <hr>
             <br>
             <h3 class="Descripcion_cancion">Yeah! Break! Care! Break!</h3><!--Nombre de la canción-->
-            <p>Es el primer tema de clausura de Dragon Ball Z Kai, es interpretada por Takayoshi Tanimoto, compuesta por Iwasaki Takafumi y escrita por Mori Yuriko. Es utilizada desde el episodio 1 al 54.</p>
+            <p>Es la primera canción de cierre de Dragon Ball Z Kai, es interpretada por Takayoshi Tanimoto, compuesta por Iwasaki Takafumi y escrita por Mori Yuriko. Es utilizada desde el episodio 1 al 54.</p>
             <br>
             <h3 class="Descripcion_cancion">Wings of the Heart</h3><!--Nombre de la canción-->
-            <p>Es el segundo tema de clausura de Dragon Ball Kai, es interpretada por Team Dragon, compuesta por Yoko Kensuke y escrita por Akimoto Yasushi. Es utilizada desde el episodio 55 al 98.</p>
+            <p>Es la segunda canción de cierre de Dragon Ball Kai, es interpretada por Team Dragon, compuesta por Yoko Kensuke y escrita por Akimoto Yasushi. Es utilizada desde el episodio 55 al 98.</p>
             <br>
             <h3 class="Descripcion_cancion">Never give up!!!</h3><!--Nombre de la canción-->
-            <p>Es el tercer tema de clausura de Dragon Ball Z Kai, es interpretado por la banda Junear. Es utilizada desde el episodio 99 al 167.Este Ending nunca fue emitido en Japón.</p>
+            <p>Es la tercera canción de cierre de Dragon Ball Z Kai, es interpretado por la banda Junear. Es utilizada desde el episodio 99 al 167.Este Ending nunca fue emitido en Japón.</p>
             <br>
             <h3 class="Descripcion_cancion">Haikei, Zarathustra</h3><!--Nombre de la canción-->
-            <p>Es el tercer tema de clausura de Dragon Ball Kai durante la transmisión por Fuji TV, es interpretado por Good Morning America. Es utilizada desde el episodio 99 al 111.</p>
+            <p>Es la tercera canción de cierre de Dragon Ball Kai durante la transmisión por Fuji TV, es interpretado por Good Morning America. Es utilizada desde el episodio 99 al 111.</p>
             <br>
             <h3 class="Descripcion_cancion">Junjo</h3><!--Nombre de la canción-->
-            <p>Es el cuarto tema de clausura de Dragon Ball Kai durante la transmisión por Fuji TV, es interpretado por Leo Ieiri. Es utilizada desde el episodio 112 hasta el 123.</p>
+            <p>Es la cuarta canción de cierre de Dragon Ball Kai durante la transmisión por Fuji TV, es interpretado por Leo Ieiri. Es utilizada desde el episodio 112 hasta el 123.</p>
             <br>
             <h3 class="Descripcion_cancion">Oh Yeah!!!!!!!</h3><!--Nombre de la canción-->
-            <p>Es el quinto tema de clausura de Dragon Ball Kai durante la transmisión por Fuji TV, es interpretado por Czecho No Republic. Es utilizada desde el episodio 124 hasta el 136.</p>
+            <p>Es la quinta canción de cierre de Dragon Ball Kai durante la transmisión por Fuji TV, es interpretado por Czecho No Republic. Es utilizada desde el episodio 124 hasta el 136.</p>
             <br>
             <h3 class="Descripcion_cancion">Galaxy</h3><!--Nombre de la canción-->
-            <p>Es el sexto tema de clausura de Dragon Ball Kai durante la transmisión por Fuji TV, es interpretado por la banda Kyuusonekokami (キュウソネコカミ). Es utilizado desde el episodio 137 hasta el 146.</p>
+            <p>Es la sexta canción de cierre de Dragon Ball Kai durante la transmisión por Fuji TV, es interpretado por la banda Kyuusonekokami (キュウソネコカミ). Es utilizado desde el episodio 137 hasta el 146.</p>
             <br>
             <h3 class="Descripcion_cancion">Don’t Let Me Down</h3><!--Nombre de la canción-->
-            <p>Es el séptimo tema de clausura de Dragon Ball Kai durante la transmisión por Fuji TV. Es utilizado desde el episodio 147 y sigue vigente.</p>
+            <p>Es la septima canción de cierre de Dragon Ball Kai durante la transmisión por Fuji TV. Es utilizado desde el episodio 147 y sigue vigente.</p>
+            <br><br>
+            <!--Serie: Dragon Ball Super-->
+            <h2>Dragon Ball Super</h2>
+            <hr>
+            <br>
+            <h3 class="Descripcion_cancion">Hello Hello Hello</h3><!--Nombre de la canción-->
+            <p>Es la primer canción de cierre de Dragon Ball Super, es interpretado por la banda Good Morning America y debutó en el capitulo 1 del ya antes dicho anime y duró hasta el capitulo 12.</p>
+            <br>
+            <h3 class="Descripcion_cancion">Starring Star</h3><!--Nombre de la canción-->
+            <p>Es la segunda canción de cierre de Dragon Ball Super, es interpretado por la banda KEYTALK, debutó en el capitulo Hasta el capitulo 25 de esta.</p>
+            <br>
+            <h3 class="Descripcion_cancion">Usubeni</h3><!--Nombre de la canción-->
+            <p>Es la tercera canción de cierre de Dragon Ball Super, es interpretado por la banda Lacco Tower y debutó en el capitulo 26 del anime.</p>
+            <br>
+            <h3 class="Descripcion_cancion">Forever Dreaming</h3><!--Nombre de la canción-->
+            <p>Es la cuarta canción de cierre de Dragon Ball Super, es interpretado por la banda Czecho no Republic y debutó en el capítulo 37 del anime.</p>
+            <br>
+            <h3 class="Descripcion_cancion">Yoka-Yoka Dance</h3><!--Nombre de la canción-->
+            <p>Es la quinta canción de cierre de Dragon Ball Super, es interpretado por la banda Batten Shōjo-Tai.</p>
+            <br>
+            <h3 class="Descripcion_cancion">Chaofan Music</h3><!--Nombre de la canción-->
+            <p>Es la sexta canción de cierre de Dragon Ball Super. Es interpretado por la banda Arukara.</p>
+            <br>
+            <h3 class="Descripcion_cancion">Aku no Tenshi to Seigi no Akuma</h3><!--Nombre de la canción-->
+            <p>Es la septima canción de cierre de la serie de anime Dragon Ball Super desde el episodio 73. Fue compuesto por la banda THE COLLECTORS.</p>
+            <br>
+            <h3 class="Descripcion_cancion">Boogie Back</h3><!--Nombre de la canción-->
+            <p>Es la octava canción de cierre de Dragon Ball Super. Es interpretado por Inoue Miyu.</p>
+            <br>
+            <h3 class="Descripcion_cancion">Haruka</h3><!--Nombre de la canción-->
+            <p>Es la novena canción de cierre de Dragon Ball Super. Es interpretado por la banda Lacco Tower.</p>
+            <br>
+            <h3 class="Descripcion_cancion">70cm Shino no Modobe</h3><!--Nombre de la canción-->
+            <p>Es la décima canción de cierre de Dragon Ball Super y es interpretado por la banda ROTTENGRAFFTY.</p>
+            <br>
+            <h3 class="Descripcion_cancion">Lágrima</h3><!--Nombre de la canción-->
+            <p>Es la undécima canción de cierre de Dragon Ball Super y es interpretado por la banda OnePixcel.</p>
             <br>
         </div>
     </div>
