Actualizado con Flexbox

--- a/seccion2.html
+++ b/seccion2.html
@@ -26,8 +26,10 @@
 
         </nav>
     </Header>
-    <!--Contenedor de todo el contenido-->
-    <div class="Container_Music">
+    <!--Conteiner Flex-->
+    <div class="Container_general">
+        <!--Contenedor de todo el contenido-->
+        <div class="Container_Music">
         <a href="">de: Música</a>
         <br>
         <br>
@@ -603,6 +605,13 @@
             <h3 class="Descripcion_cancion">Lágrima</h3><!--Nombre de la canción-->
             <p>Es la undécima canción de cierre de Dragon Ball Super y es interpretado por la banda OnePixcel.</p>
             <br>
+        </div>
+        </div>
+        <!--Server_Discord-->
+        <div class="Server_Discord">
+            <div class="Titulo_Discord">
+                <h2>Servidor de Discord</h2>
+            </div>
         </div>
     </div>
 </body>
