--- a/seccion5.html
+++ b/seccion5.html
@@ -18,13 +18,19 @@
         href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
     <title> Contacto </title>
 </head>
+<!--barras de navegacion laterales removidas-->
+<style>
+    body {
+        overflow: hidden;
+    }
+</style>
 
 <body>
 
     <section class="header">
 
         <nav>
-
+            <a href="index.html"><img src="images/logodragonball.png" /> </a>
             <div class="nav-links" id="navlinks">
                 <!--site:fontawesome / X mark icon-->
                 <i class="fa fa-times"></i>
@@ -34,19 +40,21 @@
                     <li><a href="seccion3.html">SERVICES</a></li>
                     <li><a href="seccion4.html">BLOG</a></li>
                     <li><a href="seccion5.html">CONTACTO</a></li>
-                    <!--formulario de contacto por medio de https://formsubmit.co/ hay que levantar la pagina en un server para ejecutar-->
-                    <div class="container">
-                        <form action="https://formsubmit.co/dragonballzblog2023@gmail.com" method="POST" />
-                        <h3> Ponerse en contacto </h3>
-                        <input type="text" name="name" placeholder="yourname" required>
-                        <input type="email" name="email" placeholder="Email id" required>
-                        <input type="text" name="phone" placeholder="phone number" required>
-                        <textarea name="message" row="4" placeholder="como te puedo ayudar?" required></textarea>
-                        <button type="submit"> Send</button>
-                        </form>
 
-                    </div>
                 </ul>
+
+                <!--formulario de contacto por medio de https://formsubmit.co/ hay que levantar la pagina en un server para ejecutar-->
+                <div class="container">
+                    <form action="https://formsubmit.co/dragonballzblog2023@gmail.com" method="POST" />
+                    <h3> contacto </h3>
+                    <input type="text" name="name" placeholder="yourname" required>
+                    <input type="email" name="email" placeholder="Email id" required>
+                    <input type="text" name="phone" placeholder="phone number" required>
+                    <textarea name="message" row="4" placeholder="como te puedo ayudar?" required></textarea>
+                    <button type="submit"> Send</button>
+                    </form>
+
+                </div>
 
         </nav>
     </section>
